c4prj2_input/grade.txt
Grading at Tue Mar 30 19:24:24 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:84:1: error: ISO C forbids nested functions [-Werror=pedantic]
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc) {
 ^
input.c:113:1: error: expected declaration or statement at end of input
 }
 ^
input.c:113:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
